--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get_storage:
+  firebase_auth:
+  firebase_core:
+  cloud_firestore:
+  firebase_storage:
+  image_picker: ^0.8.6
+  riverpod:
+  flutter_riverpod:
+  fluttertoast:
 
 dev_dependencies:
   flutter_test:
